# ShockEngine

./: .gitignore  CMakeLists.txt  main.cpp
include/Core/: Application.hpp  ContextBuffer.hpp  Manager.hpp  State.hpp  StateIds.hpp  StateStack.hpp
include/Game/: Camera.hpp  Entity.hpp  Instance.hpp  InstanceManager.hpp  Player.hpp  World.hpp
include/Game/Components/: CollisionComponent.hpp  Component.hpp  MovementComponent.hpp
include/Input/: InputManager.hpp  KeyActionIds.hpp  Manager.hpp
include/Render/: Diagnostics.hpp  Map.hpp  ProceduralTileMap.hpp  RenderedObject.hpp  RenderedObjectManager.hpp  Tile.hpp  TileMap.hpp
include/Resource/: ResourceHolder.hpp  ResourceIdentifiers.hpp
include/States/: GameState.hpp  PauseState.hpp
include/Utilities/: Matrix.hpp  StringUtils.hpp
include/Utilities/File/: Filepath.hpp
include/Utilities/Math/: Matrix.hpp
include/Utilities/String/: StringUtils.hpp
mapdata/: test.stm
src/Core/: Application.cpp  Application.hpp  ContextBuffer.cpp  State.cpp  StateStack.cpp
src/Game/: Camera.cpp  Entity.cpp  Instance.cpp  InstanceManager.cpp  Player.cpp  World.cpp
src/Game/Components/: CollisionComponent.cpp  MovementComponent.cpp
src/Input/: InputManager.cpp
src/Render/: Diagnostics.cpp  Map.cpp  ProceduralTileMap.cpp  RenderedObject.cpp  RenderedObjectManager.cpp  TileMap.cpp
src/Render/ImGui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/States/: GameState.cpp  PauseState.cpp
